update font color

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.wikiloc.com/wikiloc/user.do?id=6626460"><i class="bi bi-map"></i></a>
+        <a href="seyed.mo30@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href="https://t.me/seyed_mo30"><i class="bi bi-telegram"></i></a>
+        <a href="https://instagram.com/seyedmo30"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/mo30/"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -80,13 +81,13 @@
       <div class="container text-center" data-aos="zoom-out" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h2>MO30 Adams</h2>
-            <p>I'm a professional illustrator from San Francisco</p>
-            <a href="about.html" class="btn-get-started">About Me</a>
+            <h2 style="color: white;">Mostafa Hosseini</h2>
+            <p style="color: white;font-weight: bold;">I am a passionate software engineer who thrives on coding and embraces the great outdoors through camping and hiking adventures</p>
+            <a href="about.html" class="btn-get-started" style="color: white;font-weight: bold;">About Me</a>
           </div>
         </div>
       </div>
-
+      
     </section><!-- /Hero Section -->
 
   </main>
