--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8">
             <h2 style="color: white;">Mostafa Hosseini</h2>
-            <p style="color: white;font-weight: bold;">I am a passionate software engineer who thrives on coding and embraces the great outdoors through camping and hiking adventures</p>
+            <p style="color: white;font-weight: bold;">I am a dedicated software engineer who enjoys coding and loves camping and hiking.</p>
             <a href="about.html" class="btn-get-started" style="color: white;font-weight: bold;">About Me</a>
           </div>
         </div>
