--- a/about.html
+++ b/about.html
@@ -4,14 +4,29 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About - MO30  Page</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>About - MO30 | Seyed Mostafa Hosseini | سید مصطفی حسینی</title>
+<!-- Meta Descriptions -->
+<meta name="description" content="Learn more about MO30, the personal website of Seyed Mostafa Hosseini, a software engineer from Tehran, Iran, specializing in Golang, microservices, and Fintech solutions.">
+<meta name="keywords" content="MO30, Seyed Mostafa Hosseini, سید مصطفی حسینی, Golang, microservices, software engineer, Tehran, Iran, seyed.mo30, mo30.ir">
+<meta name="author" content="Seyed Mostafa Hosseini">
+<meta name="robots" content="index, follow">
+
+<!-- Social Sharing Meta -->
+<meta property="og:title" content="About MO30 | Seyed Mostafa Hosseini | سید مصطفی حسینی">
+<meta property="og:description" content="Discover MO30 - the journey of Seyed Mostafa Hosseini, a passionate software engineer specializing in Golang, microservices, and Fintech.">
+<meta property="og:image" content="assets/img/profile-img.jpg">
+<meta property="og:url" content="https://www.mo30.ir">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="fa_IR">
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
+  
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -34,6 +49,32 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+
+  <!-- Schema Markup -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Seyed Mostafa Hosseini",
+      "url": "https://www.mo30.ir",
+      "image": "assets/img/profile-img.jpg",
+      "sameAs": [
+        "https://instagram.com/seyedmo30",
+        "https://linkedin.com/in/mo30",
+        "https://t.me/seyed_mo30",
+        "https://www.wikiloc.com/wikiloc/user.do?id=6626460",
+        "https://github.com/seyedmo30"
+      ],
+      "jobTitle": "Software Engineer",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Tehran",
+        "addressCountry": "IR"
+      }
+    }
+  </script>
+  
 </head>
 
 <body class="about-page">
@@ -61,10 +102,11 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="https://www.wikiloc.com/wikiloc/user.do?id=6626460"><i class="bi bi-map"></i></a>
-        <a href="seyed.mo30@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href="https://www.wikiloc.com/wikiloc/user.do?id=6626460" aria-label="Wikiloc Profile"><i class="fas fa-person-hiking"></i></a>
+        <a href="mailto:seyed.mo30@gmail.com" aria-label="Send an email"><i class="bi bi-envelope"></i></a>
         <a href="https://t.me/seyed_mo30"><i class="bi bi-telegram"></i></a>
         <a href="https://instagram.com/seyedmo30"><i class="bi bi-instagram"></i></a>
+        <a href="https://github.com/seyedmo30"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/mo30/"><i class="bi bi-linkedin"></i></a>
       </div>
 
@@ -85,7 +127,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="Profile picture of Seyed Mostafa Hosseini - mo30">
           </div>
           <div class="col-lg-8 content">
             <h2>My Journey as a Software Engineer</h2>
@@ -143,10 +185,11 @@
  
      
       <div class="social-links d-flex justify-content-center">
-        <a href="https://www.wikiloc.com/wikiloc/user.do?id=6626460"><i class="bi bi-map"></i></a>
-        <a href="seyed.mo30@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href="https://www.wikiloc.com/wikiloc/user.do?id=6626460" aria-label="Wikiloc Profile"><i class="fas fa-person-hiking"></i></a>
+        <a href="mailto:seyed.mo30@gmail.com" aria-label="Send an email"><i class="bi bi-envelope"></i></a>
         <a href="https://t.me/seyed_mo30"><i class="bi bi-telegram"></i></a>
         <a href="https://instagram.com/seyedmo30"><i class="bi bi-instagram"></i></a>
+        <a href="https://github.com/seyedmo30"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/mo30/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
