--- a/resume.html
+++ b/resume.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Resume - MO30 Page</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>RESUME - MO30 | Seyed Mostafa Hosseini | سید مصطفی حسینی</title>
+<!-- Meta Descriptions -->
+<meta name="description" content="Learn more about MO30, the personal website of Seyed Mostafa Hosseini, a software engineer from Tehran, Iran, specializing in Golang, microservices, and Fintech solutions.">
+<meta name="keywords" content="MO30, Seyed Mostafa Hosseini, سید مصطفی حسینی, Golang, microservices, software engineer, Tehran, Iran, seyed.mo30, mo30.ir">
+<meta name="author" content="Seyed Mostafa Hosseini">
+<meta name="robots" content="index, follow">
+
+<!-- Social Sharing Meta -->
+<meta property="og:title" content="About MO30 | Seyed Mostafa Hosseini | سید مصطفی حسینی">
+<meta property="og:description" content="Discover MO30 - the journey of Seyed Mostafa Hosseini, a passionate software engineer specializing in Golang, microservices, and Fintech.">
+<meta property="og:image" content="assets/img/profile-img.jpg">
+<meta property="og:url" content="https://www.mo30.ir">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="fa_IR">
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
+  
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -36,6 +50,32 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+
+  <!-- Schema Markup -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Seyed Mostafa Hosseini",
+      "url": "https://www.mo30.ir",
+      "image": "assets/img/profile-img.jpg",
+      "sameAs": [
+        "https://instagram.com/seyedmo30",
+        "https://linkedin.com/in/mo30",
+        "https://t.me/seyed_mo30",
+        "https://www.wikiloc.com/wikiloc/user.do?id=6626460",
+        "https://github.com/seyedmo30"
+      ],
+      "jobTitle": "Software Engineer",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Tehran",
+        "addressCountry": "IR"
+      }
+    }
+  </script>
+  
 </head>
 
 <body class="resume-page">
@@ -63,10 +103,11 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="https://www.wikiloc.com/wikiloc/user.do?id=6626460"><i class="bi bi-map"></i></a>
-        <a href="seyed.mo30@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href="https://www.wikiloc.com/wikiloc/user.do?id=6626460" aria-label="Wikiloc Profile"><i class="fas fa-person-hiking"></i></a>
+        <a href="mailto:seyed.mo30@gmail.com" aria-label="Send an email"><i class="bi bi-envelope"></i></a>
         <a href="https://t.me/seyed_mo30"><i class="bi bi-telegram"></i></a>
         <a href="https://instagram.com/seyedmo30"><i class="bi bi-instagram"></i></a>
+        <a href="https://github.com/seyedmo30"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/mo30/"><i class="bi bi-linkedin"></i></a>
       </div>
 
@@ -206,12 +247,14 @@
     <div class="container">
 
       <div class="social-links d-flex justify-content-center">
-        <a href="https://www.wikiloc.com/wikiloc/user.do?id=6626460"><i class="bi bi-map"></i></a>
-        <a href="seyed.mo30@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href="https://www.wikiloc.com/wikiloc/user.do?id=6626460" aria-label="Wikiloc Profile"><i class="fas fa-person-hiking"></i></a>
+        <a href="mailto:seyed.mo30@gmail.com" aria-label="Send an email"><i class="bi bi-envelope"></i></a>
         <a href="https://t.me/seyed_mo30"><i class="bi bi-telegram"></i></a>
         <a href="https://instagram.com/seyedmo30"><i class="bi bi-instagram"></i></a>
+        <a href="https://github.com/seyedmo30"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/mo30/"><i class="bi bi-linkedin"></i></a>
       </div>
+
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
