--- a/index.html
+++ b/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - MO30  Page</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>MO30 | Seyed Mostafa Hosseini - Software Engineer | سید مصطفی حسینی</title>
+<!-- Meta Descriptions -->
+<meta name="description" content="Learn more about MO30, the personal website of Seyed Mostafa Hosseini, a software engineer from Tehran, Iran, specializing in Golang, microservices, and Fintech solutions.">
+<meta name="keywords" content="MO30, Seyed Mostafa Hosseini, سید مصطفی حسینی, Golang, microservices, software engineer, Tehran, Iran, seyed.mo30, mo30.ir">
+<meta name="author" content="Seyed Mostafa Hosseini">
+<meta name="robots" content="index, follow">
+
+<!-- Social Sharing Meta -->
+<meta property="og:title" content="About MO30 | Seyed Mostafa Hosseini | سید مصطفی حسینی">
+<meta property="og:description" content="Discover MO30 - the journey of Seyed Mostafa Hosseini, a passionate software engineer specializing in Golang, microservices, and Fintech.">
+<meta property="og:image" content="assets/img/profile-img.jpg">
+<meta property="og:url" content="https://www.mo30.ir">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="fa_IR">
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
+  
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -34,6 +50,32 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+
+  <!-- Schema Markup -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Seyed Mostafa Hosseini",
+      "url": "https://www.mo30.ir",
+      "image": "assets/img/profile-img.jpg",
+      "sameAs": [
+        "https://instagram.com/seyedmo30",
+        "https://linkedin.com/in/mo30",
+        "https://t.me/seyed_mo30",
+        "https://www.wikiloc.com/wikiloc/user.do?id=6626460",
+        "https://github.com/seyedmo30"
+      ],
+      "jobTitle": "Software Engineer",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Tehran",
+        "addressCountry": "IR"
+      }
+    }
+  </script>
+  
 </head>
 
 <body class="index-page">
@@ -61,10 +103,11 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="https://www.wikiloc.com/wikiloc/user.do?id=6626460"><i class="bi bi-map"></i></a>
-        <a href="seyed.mo30@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href="https://www.wikiloc.com/wikiloc/user.do?id=6626460" aria-label="Wikiloc Profile"><i class="fas fa-person-hiking"></i></a>
+        <a href="mailto:seyed.mo30@gmail.com" aria-label="Send an email"><i class="bi bi-envelope"></i></a>
         <a href="https://t.me/seyed_mo30"><i class="bi bi-telegram"></i></a>
         <a href="https://instagram.com/seyedmo30"><i class="bi bi-instagram"></i></a>
+        <a href="https://github.com/seyedmo30"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/mo30/"><i class="bi bi-linkedin"></i></a>
       </div>
 
@@ -75,14 +118,14 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section">
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in">            
+      <img src="assets/img/hero-bg.jpg" alt="main picture of Seyed Mostafa Hosseini - mo30" data-aos="fade-in">            
 
       
       <div class="container text-center" data-aos="zoom-out" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
             <h2 style="color: white;">Mostafa Hosseini</h2>
-            <p style="color: white;font-weight: bold;">I am a dedicated software engineer who enjoys coding and loves camping and hiking.</p>
+            <p style="color: white;font-weight: bold;">I am a dedicated software engineer with a passion for coding, camping, and hiking.</p>
             <a href="about.html" class="btn-get-started" style="color: white;font-weight: bold;">About Me</a>
           </div>
         </div>
@@ -95,12 +138,13 @@
   <footer id="footer" class="footer light-background">
 
     <div class="container">
- 
+     
       <div class="social-links d-flex justify-content-center">
-        <a href="https://www.wikiloc.com/wikiloc/user.do?id=6626460"><i class="bi bi-map"></i></a>
-        <a href="seyed.mo30@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href="https://www.wikiloc.com/wikiloc/user.do?id=6626460" aria-label="Wikiloc Profile"><i class="fas fa-person-hiking"></i></a>
+        <a href="mailto:seyed.mo30@gmail.com" aria-label="Send an email"><i class="bi bi-envelope"></i></a>
         <a href="https://t.me/seyed_mo30"><i class="bi bi-telegram"></i></a>
         <a href="https://instagram.com/seyedmo30"><i class="bi bi-instagram"></i></a>
+        <a href="https://github.com/seyedmo30"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/mo30/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
