--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
+          <li><a href="devlog/index.html">Devlog</a></li>
            
           <li><a href="portfolio.html">Portfolio</a></li>
  
