--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
-           
+          <li><a href="devlog/index.html">Devlog</a></li>
           <li><a href="portfolio.html" class="active">Portfolio</a></li>
  
            
